--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Seleção de Estilo de Filme</title>
+    <title>Seleção de Temas Tecnológicos</title>
 </head>
 <body>
     <center>
@@ -23,4 +23,5 @@
         <p id="mensagem"></p>
     </center>
     <script src="script3.js"></script>
+
 
